--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,5 +10,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 spring.flyway.locations=classpath:db/migration/postgresql/common,classpath:db/migration/h2
+## SWAGGER
+springdoc.swagger-ui.persistAuthorization=true
 
 
